--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <fieldset class="ad-form__element ad-form__element--wide" disabled>
           <label class="ad-form__label" for="address">Адрес</label>
-          <input id="address" name="address" type="text" readonly>
+          <input id="address" name="address" type="text" readonly required>
         </fieldset>
 
         <fieldset class="ad-form__element" disabled>
@@ -157,9 +157,9 @@
         <fieldset class="ad-form__element"  disabled>
           <label class="ad-form__label" for="capacity">Количество мест</label>
           <select id="capacity" name="capacity">
-            <option value="3" selected>для 3 гостей</option>
+            <option value="3">для 3 гостей</option>
             <option value="2">для 2 гостей</option>
-            <option value="1">для 1 гостя</option>
+            <option value="1" selected>для 1 гостя</option>
             <option value="0">не для гостей</option>
           </select>
         </fieldset>
@@ -264,7 +264,8 @@
 
     <button type="button" class="map__pin" style="left: 200px; top: 400px;"><img src="img/avatars/user07.png" width="40" height="40" draggable="false" alt="Метка объявления"></button>
   </template>
-  <script src = js\data.js></script>
+  <script src = js\backend.js></script>
+  <!--<script src = js\data.js></script>-->
   <script src = js\map.js></script>
   <script src = js\form.js></script>
 </body>
