небольшие правки: добавлено сообщение об ошибке при отсутствии загрузки данных

--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
     <div class="success hidden">
       <p class="success__message">Ваше объявление<br>успешно размещено!</p>
     </div>
+    <div class="error hidden">
+      <p class="error__message">Упс!<br>Кажется, что-то пошло не так!</p>
+    </div>
   </main>
 
   <footer class="footer container">
