--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <fieldset class="ad-form__element" disabled>
           <label class="ad-form__label" for="type">Тип жилья</label>
           <select id="type" name="type">
-            <option value="bungalo">Бунгало</option>
+            <option value="bungalow">Бунгало</option>
             <option value="flat" selected>Квартира</option>
             <option value="house">Дом</option>
             <option value="palace">Дворец</option>
