--- a/index.html
+++ b/index.html
@@ -271,5 +271,7 @@
   <!--<script src = js\data.js></script>-->
   <script src = js\map.js></script>
   <script src = js\form.js></script>
+  <script src = js\debounce.js></script>
+  <script src = js\filter.js></script>
 </body>
 </html>
