добавила кнопку для закрытия попапа с сообщением об успехе/ошибке

--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@
 
     <div class="success hidden">
       <p class="success__message">Ваше объявление<br>успешно размещено!</p>
+      <button class="btn button--success">Продолжить</button>
     </div>
     <div class="error hidden">
       <p class="error__message">Упс!<br>Кажется, что-то пошло не так!</p>
+      <button class="btn button--error">Продолжить</button>
     </div>
   </main>
 
