визуальные правки сообщения об ошибке

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </div>
     <div class="error hidden">
       <p class="error__message">Упс!<br>Кажется, что-то пошло не так!</p>
-      <button class="btn button--error">Продолжить</button>
+      <button class="btn button--error">Попробовать снова</button>
     </div>
   </main>
 
