добавила атрибут accept, чтобы выбирались файлы изображений + добавила поле с выбором фотографии

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <img src="img/muffin-grey.svg" alt="Аватар пользователя" width="40" height="44">
             </div>
             <div class="ad-form__field">
-              <input type="file" id="avatar" name="avatar" class="ad-form-header__input visually-hidden">
+              <input type="file" id="avatar" name="avatar" class="ad-form-header__input visually-hidden" accept=".jpeg,.jpg,.png">
               <label class="ad-form-header__drop-zone" for="avatar">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
             <p class="ad-form-header__info">Заполните все обязательные поля, назначьте цену, загрузите фотографии. Придумайте интересное описание. Оно сделает объявление более живым и привлекательным. Получившееся объявление должно давать гостям полное представление о вашем жилье.</p>
@@ -195,10 +195,12 @@
           <label class="ad-form__label">Фотографии жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" accept=".jpeg,.jpg,.png" multiple>
               <label for="images" class="ad-form__drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
-            <div class="ad-form__photo"></div>
+            <div class="ad-form__photo--storage">
+              <label for="images" class="ad-form__photo ad-form__photo--add"></label>
+            </div>
           </div>
         </fieldset>
 
@@ -275,5 +277,6 @@
   <script src = js\form.js></script>
   <script src = js\debounce.js></script>
   <script src = js\filter.js></script>
+  <script src = js\file.js></script>
 </body>
 </html>
