--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
 
     <div class="success hidden">
       <p class="success__message">Ваше объявление<br>успешно размещено!</p>
-      <button class="btn button--success">Продолжить</button>
+      <button class="btn button--success" autofocus>Продолжить</button>
     </div>
     <div class="error hidden">
       <p class="error__message">Упс!<br>Кажется, что-то пошло не так!</p>
-      <button class="btn button--error">Попробовать снова</button>
+      <button class="btn button--error" autofocus>Попробовать снова</button>
     </div>
   </main>
 
